--- a/firefly/.settings/org.eclipse.core.resources.prefs
+++ b/firefly/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,32 @@
 eclipse.preferences.version=1
+encoding//custom/app/data/commondata.py=utf8
+encoding//custom/app/data/datautils.py=utf8
+encoding//custom/app/data/mcuser.py=utf8
+encoding//custom/app/data/userdataconfig.py=utf8
+encoding//custom/app/dataapp.py=utf8
+encoding//custom/app/gameapp.py=utf8
+encoding//custom/app/gate/gatelocalservice.py=utf8
+encoding//custom/app/gateapp.py=utf8
+encoding//custom/app/net/netlocalservice.py=utf8
+encoding//custom/app/netapp.py=utf8
 encoding//custom/appmain.py=utf8
 encoding//custom/startmaster.py=utf8
+encoding//custom/tool/clienttest.py=utf8
+encoding//custom/tool/test.py=utf8
+encoding//distributed/node.py=utf8
+encoding//distributed/root.py=utf8
+encoding//firefly/distributed/child.py=utf8
+encoding//firefly/distributed/manager.py=utf8
 encoding//firefly/distributed/node.py=utf8
+encoding//firefly/distributed/reference.py=utf8
+encoding//firefly/distributed/root.py=utf8
 encoding//firefly/master/master.py=utf8
+encoding//firefly/master/rootapp.py=utf8
+encoding//firefly/netconnect/protoc.py=utf8
+encoding//firefly/server/admin.py=utf8
+encoding//firefly/server/globalobject.py=utf8
+encoding//firefly/server/logobj.py=utf8
 encoding//firefly/server/server.py=utf8
+encoding//firefly/utils/services.py=utf8
+encoding//firefly/web/delayrequest.py=utf8
+encoding//server/server.py=utf8
